--- a/GithubNotify.cabal
+++ b/GithubNotify.cabal
@@ -15,6 +15,29 @@ build-type:          Simple
 -- extra-source-files:  
 cabal-version:       >=1.10
 
+executable GithubNotify-profiling
+  main-is:             Main.hs
+  -- other-modules:       
+  -- other-extensions:    
+  build-depends:       base >=4.8 && <4.9
+                     , http-conduit
+                     , http-types
+                     , libnotify
+                     , aeson
+                     , text
+                     , lens
+                     , resourcet
+                     , bytestring
+                     , mtl
+                     , transformers
+  ghc-options:
+    -O2
+    -threaded
+    -fprof-auto
+    "-with-rtsopts=-N -p -s -h -i0.1"
+  hs-source-dirs:      src
+  default-language:    Haskell2010
+
 executable GithubNotify
   main-is:             Main.hs
   -- other-modules:       
@@ -30,5 +53,8 @@ executable GithubNotify
                      , bytestring
                      , mtl
                      , transformers
+  ghc-options:
+    -O2
+    -threaded
   hs-source-dirs:      src
   default-language:    Haskell2010
