--- a/GithubNotify.cabal
+++ b/GithubNotify.cabal
@@ -38,7 +38,7 @@ executable GithubNotify-profiling
   hs-source-dirs:      src
   default-language:    Haskell2010
 
-executable GithubNotify
+executable github-notify
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
